tests/machine/x/st/string_contains.st
| s |
s := 'catch'.
Transcript show: (s at: 'contains' value: 'cat') printString; cr.
Transcript show: (s at: 'contains' value: 'dog') printString; cr.
